# DM21cm

./: .gitignore  LICENSE  MANIFEST.in  README.md  README2.md  changelog.md  get_elec_cooling.pro  main.py  matplotlibrc  misc.ipynb  pyproject.toml  requirements.txt  scatter.ipynb  spherical_transport.ipynb  status.md  utils.py
21cm_Run/: Example_Run.ipynb
21cm_darkhistory/: example.ipynb  tfinterp.py
ProductionRuns/: ExampleScript.py  bkg_script.py  dm_elec_script.py  dm_phot_script.py  dm_script.py  prod_run.py  step_size.ipynb  submit.sh
XRay_Development/: field_smooth.py  field_smoother.py
analysis/: cmp_scenarios.ipynb  finite_difference.ipynb  fisher.ipynb  fisher.py  global.ipynb  global_signal.ipynb  inj_z_finite_diff.ipynb  injection_strength.ipynb  limits.py  misc.ipynb  pbh_evaporation_time.ipynb  prop_scat_comparison.ipynb  ps.ipynb  ps.py  ps_small_inj.ipynb  submit.sh  view_fisher_results.ipynb
benchmarking/: bench_interpolators.py  ffts.ipynb  interpolators.ipynb  list_memory.ipynb  list_memory.py  profiling.ipynb  redshifting.ipynb  run_interpolators.py  run_stats_jaxfft  run_stats_scipyfft
build_tf/: 0_make_abscissa.ipynb  0_make_abscissas.ipynb  1_part_nbs.sh  1_submit_nbs.sh  2_gather_fits.py  3.ipynb  3A_make_phottf.py  3B_make_dhtf.ipynb  3B_make_nBsdhtf.py  3C_make_electf.py  3C_submit.sh  3D_gather_electf.py  3_make_phot_tf.py  3_make_tf.ipynb  3_make_tf.old.py  3_make_tf.py  3_make_tf_fix.ipynb  4_make_aad.ipynb  4_make_aad.py  5_make_dh_tf.ipynb  6_make_debug_tf.ipynb  array_to_tfgv.py  array_to_tfgv_elec.py  build_tf.sh  check_energy_conservation.ipynb  delta_t.ipynb  fits_to_array_nBs.sh  fits_to_array_nBs_A.py  fits_to_array_nBs_B.py  gas_density_dependence.ipynb  gettf_nbs.pro  make_xraycheck_tf.ipynb  misc_calculations.ipynb  part_nbs.sh  rebuild_tfgv_to_ad.ipynb  steps.sh  submit_general.sh  test_3A.ipynb  tf_status.md  tmp.py  (+3 more)
cooling/: MC.ipynb  cooling_rates.ipynb  get_elec_cooling_rates.pro  iterative_tf_method.ipynb  rates.py  spherical_transport.ipynb
cooling_rates/: EBL_EdNdE.txt  cooling_rates.ipynb
cross_check/: 1_compare_DH_ionization.ipynb  21cmfast_adia_output.txt  2_compounding_tfs.ipynb  3_DH_with_21cmfast_input.ipynb  DH_example_8.ipynb  compare_boxes.ipynb  compare_f.ipynb  compare_global.ipynb  compare_slices.ipynb  compare_step.ipynb  compare_tf.ipynb  dh_discontinuity.ipynb  get_f.ipynb  gettf_point.pro  hubble.ipynb  misc_tests.ipynb  output.txt  pbh_inj_eng_conservation.ipynb  plot.ipynb  reionization.ipynb  run_DarkHistory.ipynb  vcb_update.ipynb  xc_status.md  xsec.ipynb
data/: go_to_scratch.sh
debug/: cmb.ipynb  cmz.ipynb  eom.ipynb  evolve.ipynb  find_vcb.ipynb  fix_astro_param.ipynb  matching.ipynb  test_pbh.ipynb  tmp.ipynb
(+448 files in other folders)
